--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Aides Drug"
-author: "Put your name here!"
-date: "put the date here"
+author: "Jeanette Serrano"
+date: "Oct 5, 2020"
 output: html_document
 ---
 
@@ -9,8 +9,8 @@ output: html_document
 require(tidyverse)
 require(tigerstats)
 triUmp <-read.csv(file="triUmpsal.csv",header=TRUE)
+women <-filter(triUmp,gender =="F")
 ```
-
 # Introduction
 
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?.  If you skimp in this section expect to be marked down in your grade. Paint a picture of the project a couple of paragraphs is expected!-->
@@ -26,20 +26,33 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
 
 ## Descriptive Results
+```{r}
+barchartGC(~infected + treatment,data=triUmp)
+barchartGC(~infected + treatment,data=triUmp, type="percent")
 
+```
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
 ### Numerical Descriptive Results
-
+```{r}
+table1 <- xtabs(~infected + treatment, data=women)
+rowPerc(table1)
+colPerc(table1)
+```
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ## Inferential Results
-
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+Null hypothesis is truely low according to the p value. Drug is bad news if you are a women. Fisher test works best in this 2 by 2 situation. Those who took the drug chances were lower to catch aids, however for women 60% of them got aids and 40% took the placebo. So the other 20% women got aids by taking the drugs therefore the drug does not work for women. 
