--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -43,7 +43,9 @@ table1 <- xtabs(~infected + treatment, data=women)
 rowPerc(table1)
 colPerc(table1)
 ```
-
+  
+40% taking the drug and 60% had placebo. Those who took the drug chances were lower to catch aids. 
+  
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
@@ -54,7 +56,9 @@ chisqtestGC(table1)
 fisher.test(table1)
 ```
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
-
+  
+20% more of women got aids by taking the drugs so its not working for women. 
+  
 
 # Discussion and Conclusion
 
